--- a/Snake.cbp
+++ b/Snake.cbp
@@ -50,6 +50,10 @@
 			<Option compilerVar="CC" />
 		</Unit>
 		<Unit filename="menu.h" />
+		<Unit filename="opcoes.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="opcoes.h" />
 		<Unit filename="ranking.c">
 			<Option compilerVar="CC" />
 		</Unit>
